test/parser/rte/invariant-03.hac
// "invariant-03.hac"
ebool x, y, a, b;
bool c, d, e, f;
rte {
	x = c;
	y = d;
	a = e;
	b = f;
}
spec {
	$(~(x && y))	// rejects syntax, should be prs-&
}
